Changelog of Jail

1.2.1
- Fixed Bail sign not destroying automatically upon wrong placement
- Removed duplicated software icon file in the source code itself
- Improved accuracy of update fetcher's version comparing techniques
- Fixed duplication of unjail message when players successfully unjail by bail

1.2.0 - 11/AUG/2017
- Update fetcher now shows update changes of the latest version for Poggit or Github
- Update fetcher now shows download link of the latest version for Poggit or Github
- Update fetcher now has its ability to show info of both channels simultaneously
- Fixed results of update fetcher not showing correctly in past versions
- Fixed some of the users continued to experience problem upon start-up #28
- SetJail command now gets more complex, with more per jail settings available
- Fixed 'jailed' and 'tpjail' commands have their return statement missing #31 #32
- Bail availability now works for individual jails (/setjail <jail> bail=true/false)
- Visit availability now works for individual jails (/setjail <jail> visit=true/false)
- Fixed display issues and plugin compatibility issues of Bail command #33
- Added data compatibility checker and updater, functions at start-up
- Fixed capitalized player names not recognizable by the timer #34
- The animated emoji on the timer now shows on both Bail enabled and disabled jails
- Fixed Votes system malfunction due to data storing issues #30
- Cancelled plans for individual jail's allow-escape-area status, updated version

1.1.5 - 31/JUL/2017
- Fixed language initialization error of missing file (Critical fix)
- Fixed "listener.player.not.allowed.leave" message being overlapped
- Emoji of prisoner UI when Bail is disabled is now animated
- Added 'allow-visit' option, allows/disallows players to visit jails

1.1.4 - 30/JUL/2017
- Updated API version, compatible with the current latest PocketMine software
- Fixed old configuration files being deleted when server restarts