@@ -1,7 +1,7 @@
 name: Jail
 main: hoyinm14mc\jail\Jail
 api: ["2.0.0", "3.0.0-ALPHA3", "3.0.0-ALPHA4", "3.0.0-ALPHA5", "3.0.0-ALPHA6", "3.0.0-ALPHA7"]
-version: 1.2.0
+version: 1.2.1
 author: hoyinm14mc
 description: An advanced jail punishment system for PocketMine servers
 load: POSTWORLD
