@@ -63,4 +63,4 @@ update-checker-channel: '*'
 
 ### Config version ###
 #Do not modify this, otherwise plugin may not work properly
-v: 1.2.0
+v: 1.2.1
