@@ -5,6 +5,8 @@ Changelog of Jail
 - Removed duplicated software icon file in the source code itself
 - Improved accuracy of update fetcher's version comparing techniques
 - Fixed duplication of unjail message when players successfully unjail by bail
+- Updated Github URL at the update checker
+- Caution: This update MAY NOT be COMPATIBLE with the latest PocketMine BETA versions
 
 1.2.0 - 11/AUG/2017
 - Update fetcher now shows update changes of the latest version for Poggit or Github
